# rag-observatory

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: config.py  dependencies.py  main.py
backend/app/models/: chat.py
backend/app/routers/: chat.py  documents.py  session.py  visualization.py
backend/app/services/: embedding.py  llm.py  session_manager.py  vectorstore.py
frontend/: .env.production  index.html  package-lock.json  package.json  vercel.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatInterface.jsx  DocumentList.jsx  DocumentUpload.jsx  Navbar.jsx  RequestLogs.jsx  TsnePlot.jsx
frontend/src/hooks/: useChatData.js  useDocuments.js  useLogsData.js  useTsneData.js
frontend/src/pages/: ChatPage.jsx  DocumentsPage.jsx  LogsPage.jsx  TsnePage.jsx
frontend/src/services/: api.js  heartbeat.js
frontend/src/utils/: sessionCache.js
