[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.1",
    "groq>=1.2.0",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "pypdf>=6.12.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.29",
    "python-pptx>=1.0.2",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.49",
    "unstructured>=0.22.29",
    "uvicorn[standard]>=0.47.0",
]
